<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyNotify</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="text_messages">Text Messages</string>
    <string name="phone_calls">Phone Calls</string>
    <string name="frequency">Reminder Frequency</string>
    <string name="history">Remind From Past</string>
	<string name="startOnBoot">Start On Boot</string>
    <string name="resetTimerOnSms">a new SMS</string>
    <string name="resetTimerOnCall">a new missed call</string>
    <string name="resetTimer">Reset the timer when there is&#8230;</string>
    	
    	
    <string-array name="frequency_array">
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>
    
     <string-array name="history_array">
        <item>1 Hour</item>
        <item>12 Hours</item>
        <item>24 Hours</item>
        <item>48 Hours</item>
    </string-array>
    
    
    
</resources>