<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Switch
            android:id="@+id/serviceSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/notifications"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/smsSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/text_messages"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/callSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/phone_calls"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="bottom|left"
            android:paddingTop="15dp"
            android:text="@string/frequency"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/frequencySpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="bottom|left"
            android:paddingTop="15dp"
            android:text="@string/history"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/historySpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/startOnBootSwitch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/startOnBoot"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="bottom|left"
            android:paddingTop="15dp"
            android:text="@string/resetTimer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckedTextView
            android:id="@+id/resetTimerOnSmsCheck"
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:checkMark="?android:attr/textCheckMark"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/resetTimerOnSms" >
        </CheckedTextView>
        
        <CheckedTextView
            android:id="@+id/resetTimerOnCallCheck"
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:checkMark="?android:attr/textCheckMark"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/resetTimerOnCall" >
        </CheckedTextView>
        
        

    </LinearLayout>

</ScrollView>